--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'Poppins';
   font-size: 16px;
 }
 
@@ -22,15 +23,23 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  flex-direction: column;
 }
 
 h1 {
-  font-family: 'Poppins';
   text-transform: uppercase;
   color: #0f0f0f;
   font-size: 4.6rem;
   letter-spacing: 0.5rem;
-  animation: fadeIn 0.8s ease forwards;
+  animation: fadeIn 1.2s ease forwards;
+}
+
+h2 {
+  text-transform: uppercase;
+  color: #0f0f0f;
+  font-size: 1.5rem;
+  letter-spacing: 0.5rem;
 }
 
 @keyframes fadeIn {
@@ -39,10 +48,21 @@ h1 {
     transform: translateY(300px) scale(0.2);
   }
   100% {
-    transform: translateY(0) scale(1);
+    transform: translateY() scale(1);
   }
 }
 
 audio {
   display: none;
+}
+
+img {
+  width: 60%;
+  height: 60%;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+.imgBtn {
+  margin-bottom: 1rem;
 }
