--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,8 @@
 
 * {
   box-sizing: border-box;
+  touch-action: manipulation;
+  -ms-touch-action: manipulation;
   font-family: 'Poppins';
   font-size: 16px;
 }
