--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@ h1 {
   color: #0f0f0f;
   font-size: 4.6rem;
   letter-spacing: 0.5rem;
-  animation: fadeIn 1.2s ease forwards;
+  animation: fadeIn 1.5s ease forwards;
 }
 
 h2 {
@@ -42,12 +42,14 @@ h2 {
   color: #0f0f0f;
   font-size: 1.5rem;
   letter-spacing: 0.5rem;
+  padding-bottom: 5rem;
+  animation: fadeIn 1.5s ease forwards;
 }
 
 @keyframes fadeIn {
   0% {
     opacity: 0;
-    transform: translateY(300px) scale(0.2);
+    transform: translateY(400px) scale(0.2);
   }
   100% {
     transform: translateY() scale(1);
