--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,15 +13,10 @@
   font-size: 16px;
 }
 
-html {
-  height: 100%;
-  width: 100%;
-}
-
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,7 +27,7 @@ body {
 h1 {
   text-transform: uppercase;
   color: #0f0f0f;
-  font-size: 4.6rem;
+  font-size: 3rem;
   letter-spacing: 0.5rem;
   animation: fadeIn 1.5s ease forwards;
 }
@@ -40,7 +35,7 @@ h1 {
 h2 {
   text-transform: uppercase;
   color: #0f0f0f;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   letter-spacing: 0.5rem;
   padding-bottom: 5rem;
   animation: fadeIn 1.5s ease forwards;
@@ -68,5 +63,14 @@ img {
 }
 
 .imgBtn {
-  margin-bottom: 1rem;
+  margin-top: 4rem;
+}
+
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 4.6rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
 }
