--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,12 +26,29 @@ body {
   overflow: hidden;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+/* CSS if something is viewable or not */
 .revealed {
   display: block;
 }
 
 .hidden {
   display: none;
+}
+
+h1,
+h2,
+button,
+span {
+  color: #e0e0e0;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
 }
 
 h1 {
@@ -46,19 +63,39 @@ h2 {
   animation: fadeIn 1.5s ease forwards;
 }
 
-h1,
-h2,
-button {
-  color: #e0e0e0;
-  text-transform: uppercase;
-  letter-spacing: 0.5rem;
+/* Emoji hand */
+.wave {
+  font-size: 3rem;
+  animation: wave 2.5s infinite;
+  transform-origin: 70% 70%;
+  display: inline-block;
 }
 
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+@keyframes wave {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  }
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 button {
@@ -83,10 +120,12 @@ button.return:hover {
   color: hotpink;
 }
 
+/* Animation class to add to toggle with JavaScript */
 .animation {
   animation: fadeIn 1.5s ease forwards;
 }
 
+/* Text animation */
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -97,6 +136,7 @@ button.return:hover {
   }
 }
 
+/* Button animation */
 @keyframes shaky {
   0% {
     transform: translate(1px, 1px) rotate(0deg);
@@ -141,11 +181,29 @@ img {
   animation: fadeIn 2s ease forwards;
 }
 
+/* Media query for desktop */
 @media screen and (min-width: 768px) {
   h1 {
     font-size: 4.6rem;
   }
   h2 {
     font-size: 2rem;
+  }
+  .wave {
+    font-size: 4.6rem;
+  }
+}
+
+/* Media query for mobile buttons */
+@media screen and (max-width: 414px) {
+  button.accept {
+    color: limegreen;
+  }
+  button.decline {
+    color: firebrick;
+  }
+  button.party,
+  button.return {
+    color: hotpink;
   }
 }
